# rosidl

./: .clang-format  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  package.xml  rosidl_typesupport_introspection_cpp-extras.cmake  rosidl_typesupport_introspection_cpp-extras.cmake.in
python_cmake_module/: CMakeLists.txt  package.xml  python_cmake_module-extras.cmake
rosidl_actions/: CMakeLists.txt  package.xml  rosidl_actions-extras.cmake.in
rosidl_actions/cmake/: register_actions.cmake  rosidl_actions_convert_actions_to_msg_and_srv.cmake  rosidl_actions_generate_action_interfaces.cmake
rosidl_actions/rosidl_actions/: __init__.py
rosidl_adapter/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosidl_adapter-extras.cmake  setup.cfg  setup.py
rosidl_adapter/cmake/: rosidl_adapt_interfaces.cmake
rosidl_adapter/rosidl_adapter/: __init__.py  __main__.py  cli.py  main.py  parser.py
rosidl_adapter/scripts/: action2idl.py
rosidl_adapter/test/: parse_msg_files.py  test_base_type.py  test_cli_extensions.py  test_constant.py  test_extract_message_comments.py  test_field.py  test_message_specification.py  test_parse_action_string.py  test_parse_message_file.py  test_parse_message_string.py  test_parse_primitive_value_string.py  test_parse_service_string.py  test_parse_unicode.py  test_parse_value_string.py  test_tangle_markdown_to_rosidl.py  test_type.py  test_unicode_default_values.py  test_valid_names.py  test_validate_field_types.py
rosidl_cli/: CHANGELOG.rst  colcon.pkg  package.xml  setup.py
rosidl_cli/completion/: rosidl-argcomplete.bash  rosidl-argcomplete.zsh
rosidl_cli/resource/: package.dsv
rosidl_cli/rosidl_cli/: cli.py  common.py  entry_points.py  extensions.py
rosidl_cli/test/: test_copyright.py  test_flake8.py  test_pep257.py
rosidl_cmake/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosidl_cmake-extras.cmake
rosidl_cmake/cmake/: rosidl_adapt_interfaces.cmake  rosidl_cmake-extras.cmake.in  rosidl_cmake_export_typesupport_libraries-extras.cmake.in  rosidl_cmake_export_typesupport_libraries_package_hook.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake.in  rosidl_cmake_export_typesupport_targets_package_hook.cmake  rosidl_cmake_package_hook.cmake  rosidl_convert_actions_to_msg_and_srv.cmake  rosidl_export_typesupport_libraries.cmake  rosidl_export_typesupport_targets.cmake  rosidl_find_package_idl.cmake  rosidl_generate_action_interfaces.cmake  rosidl_generate_interfaces.cmake  rosidl_get_typesupport_target.cmake  rosidl_identify_action_idls.cmake  rosidl_target_interfaces.cmake  rosidl_write_additional_context.cmake  rosidl_write_generator_arguments.cmake
rosidl_cmake/rosidl_cmake/: __init__.py
rosidl_default_generators/: CMakeLists.txt  package.xml  rosidl_default_generators-extras.cmake.in
rosidl_default_runtime/: CMakeLists.txt  package.xml
rosidl_generator_c/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosidl_generator_c-extras.cmake.in  setup.cfg
rosidl_generator_c/benchmark/: benchmark_interfaces.cpp
rosidl_generator_c/cmake/: register_c.cmake  rosidl_generator_c_generate_action_interfaces.cmake  rosidl_generator_c_generate_interfaces.cmake  rosidl_generator_c_write_arguments.cmake
rosidl_generator_c/msg/: DynamicArrayPrimitivesNested.msg  PrimitiveValues.msg  Primitives.msg  PrimitivesBoundedArrays.msg  PrimitivesStaticArrays.msg  PrimitivesUnboundedArrays.msg  String.msg  StringArrays.msg  Telegram1.msg  Telegram2.msg  Various.msg  WStrings.msg  Wire.msg
rosidl_generator_c/resource/: action.h.em  action__type_support.c.em  action__type_support.h.em  empty__description.c.em  full__description.c.em  idl.h.em  idl__description.c.em  idl__functions.c.em  idl__functions.h.em  idl__struct.h.em  idl__type_support.c.em  idl__type_support.h.em  msg-c.h.template  msg.h.em  msg.h.template  msg_Struct-c.h.template  msg__bounds.h.em  msg__functions.c.em  msg__functions.c.template  msg__functions.h.em  msg__functions.h.template  msg__struct.h.em  msg__struct.h.template  msg__type_support.h.em  msg__type_support.h.template  rosidl_generator_c__action_visibility_control.h.in  rosidl_generator_c__visibility_control.h.in  srv.h.em  srv.h.template  srv__type_support.c.em  srv__type_support.h.em
rosidl_generator_c/rosidl_generator_c/: __init__.py
rosidl_generator_c/src/: message_bounds.c  message_type_support.c  primitives_array_functions.c  primitives_sequence_functions.c  service_type_support.c  string_functions.c  u16string_functions.c
rosidl_generator_c/test/: separate_compilation.c  separate_compilation.h  test_compilation.c  test_compilation.cpp  test_interfaces.c  test_interfaces.cpp  test_invalid_initialization.c
rosidl_generator_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosidl_generator_cpp-extras.cmake  rosidl_generator_cpp-extras.cmake.in  setup.cfg
rosidl_generator_cpp/cmake/: register_cpp.cmake  rosidl_generator_cpp_generate_action_interfaces.cmake  rosidl_generator_cpp_generate_interfaces.cmake  rosidl_generator_cpp_write_arguments.cmake
rosidl_generator_cpp/msg/: BoundedArrayBounded.msg  BoundedArrayStatic.msg  BoundedArrayUnbounded.msg  DynamicArrayBounded.msg  DynamicArrayPrimitives.msg  NestedBounded.msg  PrimitiveStaticArrays.msg  Primitives.msg  PrimitivesBounded.msg  PrimitivesConstants.msg  PrimitivesDefault.msg  PrimitivesSomeDefault.msg  PrimitivesUnbounded.msg  StaticArrayBounded.msg  StaticArrayNested.msg  StaticArrayStatic.msg  StaticArrayUnbounded.msg  (+5 more)
rosidl_generator_dds_connext_cpp/: CMakeLists.txt  package.xml  rosidl_generator_dds_connext_cpp-extras.cmake
rosidl_generator_dds_idl/: CMakeLists.txt  package.xml  rosidl_generator_dds_idl-extras.cmake
rosidl_generator_dds_opensplice_cpp/: CMakeLists.txt  package.xml  rosidl_generator_dds_opensplice_cpp-extras.cmake
rosidl_generator_java/: CMakeLists.txt  package.xml  rosidl_generator_java-extras.cmake.in
rosidl_generator_py/: CMakeLists.txt  package.xml  rosidl_generator_py-extras.cmake.in
rosidl_generator_py_tests/: CMakeLists.txt  package.xml
rosidl_generator_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+524 files in other folders)
