<?xml version="1.0"?>
<package format="2">
  <name>rosidl_typesupport_introspection_cpp</name>
  <version>0.0.0</version>
  <description>
    Generate the message type support for dynamic message construction in C++.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <!-- This is required for the rosidl_message_type_support_t struct and visibility macros -->
  <build_depend>rosidl_generator_c</build_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_export_depend>rosidl_generator_c</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
