[metadata]
name = rosidl_adapter
version = '0.5.1'
project_urls =
    GitHub = https://github.com/ros2/rosidl/tree/master/rosidl_adapter
author = Dirk Thomas
author_email = dthomas@osrfoundation.org
maintainer = Dirk Thomas
maintainer_email = dthomas@osrfoundation.org
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
license = Apache License, Version 2.0
description = Scripts to convert .msg/.srv files to .idl.

[options]
packages = find:
tests_require =
  pytest
  pytest-cov
zip_safe = false

[options.entry_points]
console_scripts =
    msg2idl = rosidl_adapter.msg.cli:main
    srv2idl = rosidl_adapter.srv.cli:main
