<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosidl_cli</name>
  <version>3.1.5</version>
  <description>
    Command line tools for ROS interface generation.
  </description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>Apache License 2.0</license>
  <author email="clalancette@openrobotics.org">Chris Lalancette</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>

  <exec_depend>python3-argcomplete</exec_depend>
  <exec_depend>python3-importlib-metadata</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
