<?xml version="1.0"?>
<package format="2">
  <name>rosidl_default_generators</name>
  <version>0.0.0</version>
  <description>A configuration package defining the default ROS interface generrators.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_cpp</buildtool_export_depend>

  <buildtool_export_depend>rosidl_typesupport_introspection_cpp</buildtool_export_depend>

<!--
  <buildtool_export_depend>rosidl_typesupport_connext_cpp</buildtool_export_depend>
-->
  <buildtool_export_depend>rosidl_typesupport_opensplice_cpp</buildtool_export_depend>
</package>
