<?xml version="1.0"?>
<package format="2">
  <name>rosidl_default_runtime</name>
  <version>0.0.0</version>
  <description>A configuration package defining the runtime for the ROS interfaces.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>rosidl_typesupport_introspection_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_introspection_cpp</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
