<?xml version="1.0"?>
<package format="2">
  <name>rosidl_default_runtime</name>
  <version>0.0.0</version>
  <description>A configuration package defining the runtime for the ROS interfaces.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_cpp</build_export_depend>

  <!-- These two dependencies cannot stay here. -->
  <!-- This is a workaround for: https://github.com/ros2/ros2/issues/174 -->
  <!-- Once that issue is properly resolved this needs to be removed. -->
  <build_export_depend>rosidl_typesupport_connext_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_connext_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_opensplice_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_opensplice_cpp</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
